# actix-doc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  book.toml  build.rs  docker-compose.yml
client/: package-lock.json  package.json
client/src/app/: page.tsx
client/src/components/editor/: Editor.tsx
client/src/components/layout/: AppSidebar.tsx
client/src/lib/: api.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  MDBOOK.md  README.md  SUMMARY.md
front/: package.json  pnpm-lock.yaml
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/(dashboard)/trash/: page.tsx
front/src/app/documents/: page.tsx
front/src/app/documents/[id]/: page.tsx
front/src/app/login/: page.tsx
front/src/app/register/: page.tsx
front/src/app/settings/: page.tsx
front/src/components/: search-dialog.tsx
front/src/components/editor/: DocumentEditor.tsx  Editor.tsx
front/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  AuthLayout.tsx
front/src/components/providers/: DocumentsProvider.tsx
front/src/components/theme/: ThemeCustomizer.tsx
front/src/components/ui/: resizable.tsx  tag-input.tsx
front/src/hooks/: use-debounce.ts
front/src/lib/: api.ts  auth.tsx
migrations/: 20240121000000_add_tags.sql  20240121000001_add_deleted_at.sql  20240121000002_add_fts.sql
server/: Cargo.toml  data.db
server/migrations/: 20240101000000_init.sql
server/src/: auth.rs  errors.rs  main.rs  models.rs
src/: auth.rs  db.rs  docs.rs  docs_trash.rs  errors.rs  main.rs  models.rs  search.rs  tags.rs
src/models/: mod.rs  tag.rs
