[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
jsonwebtoken = "9"
env_logger = "0.11"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
futures = "0.3"
argon2 = "0.5.3"
derive_more = { version = "2.1.1", features = ["display"] }
rand = "0.8.5"
actix-files = "0.6.9"
